Fix scrollbars on safari and firefox

--- a/src/core/reset.scss
+++ b/src/core/reset.scss
@@ -61,3 +61,7 @@ html, body, #root, .App {
   height: 100%;
   background-color: #222831;
 }
+
+.App {
+  overflow: hidden;
+}
